[tool.poetry]
name = "legistream-backend"
version = "1.4.17"
description = "Get live stream metadata from the various Australian parliaments."
readme="README.md"
authors = ["king-millez <millez.dev@gmail.com>"]
license = "GPL-2.0-only"
homepage="https://legistream.org"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
requests = "^2.25.1"
m3u8 = "^0.9.0"
bs4 = "^0.0.1"
ImageHash = "^4.2.0"
websocket = "^0.2.1"
websocket-client = "^1.1.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
